2009-11-22  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Introduce sidebar background on timeline panel in order
        to prevent it from flickering on scroll.

        https://bugs.webkit.org/show_bug.cgi?id=31789

        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel):
        (WebInspector.TimelinePanel.prototype.setSidebarWidth):
        (WebInspector.TimelinePanel.prototype._onScroll):
        (WebInspector.TimelinePanel.prototype._scheduleRefresh):
        * inspector/front-end/inspector.css:

2009-11-22  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Reimplement TimelinePanel to make it fast:
        - Extract grid and overview into separate files
        - Make timeline create only divs for visible rows

        https://bugs.webkit.org/show_bug.cgi?id=31784

        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * inspector/front-end/AbstractTimelinePanel.js:
        (WebInspector.AbstractTimelinePanel.prototype.createInterface):
        (WebInspector.AbstractTimelinePanel.prototype.refresh):
        (WebInspector.AbstractTimelinePanel.prototype.set calculator):
        * inspector/front-end/TimelineGrid.js: Added.
        (WebInspector.TimelineGrid):
        (WebInspector.TimelineGrid.prototype.get itemsGraphsElement):
        (WebInspector.TimelineGrid.prototype.updateDividers):
        (WebInspector.TimelineGrid.prototype.addEventDivider):
        (WebInspector.TimelineGrid.prototype.setScrollAndDividerTop):
        * inspector/front-end/TimelineOverviewPane.js: Added.
        (WebInspector.TimelineOverviewPane):
        (WebInspector.TimelineOverviewPane.prototype._onCheckboxClicked):
        (WebInspector.TimelineOverviewPane.prototype.update):
        (WebInspector.TimelineOverviewPane.prototype.setSidebarWidth):
        (WebInspector.TimelineOverviewPane.prototype.updateMainViewWidth):